k8s/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        ports:
        - containerPort: 9090
        args:
          - '--config.file=/etc/prometheus/prometheus.yml'
          - '--storage.tsdb.path=/prometheus/'
          - '--web.console.libraries=/etc/prometheus/console_libraries'
          - '--web.console.templates=/etc/prometheus/consoles'
          - '--web.enable-lifecycle'
          - '--web.external-url=https://compass-app.tum.de/prometheus'
          - '--web.route-prefix=/prometheus'
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/
        - name: alert-rules
          mountPath: /etc/prometheus/rules/
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
      - name: alert-rules
        configMap:
          name: prometheus-alert-rules

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090
    name: web
